4740 kstat(1M) prints wrong snaptime Reviewed by: Dave Pacheco <dap@joyent.com> Reviewed by: David Höppner <0xffea@gmail.com> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Richard Lowe <richlowe@richlowe.net>